Cambiar el lenguaje de programación a usar.
Cambio C por Java debido a que será más fácil y rápido desarrollar un
videojuego con el, además de que se facilitarían las pruebas al ser un
lenguaje más portable.

--- a/main.tex
+++ b/main.tex
@@ -105,8 +105,8 @@ capacidades del sistema, sea compatible con los controles diseñados y permita
 dos jugadores simultaneos, el juego será un clon de "pong!".\\
 El juego incluirá la posibilidad de guardar mejores puntajes, efectos de sonido
 y gráficos simples en 2D.\\
-Se propone programar usando C en conjunto con la biblioteca SDL usando el patrón
-de desarrollo ECS.
+Se propone programar en Java utilizando bibliotecas que faciliten la creación
+de gráficos como lo pueden ser: FXGL y libGDX.
 
 \section{Desarrollo}
 Aquí se incluirá todo lo relacionado al desarrollo del hardware y software
