Aclarar requisitos del S. O.

--- a/main.tex
+++ b/main.tex
@@ -94,9 +94,14 @@ digitalizada adecuadamente por un componente externo y recibida por la CPU
 principal para ser interpretada.
 
 \subsubsection{Sistema operativo}
-Se propone un sistema operativo modificado para iniciar directamente a una
-aplicación en pantalla completa que permita iniciar los juegos así como también
-realizar ajustes en la consola.
+Se espera tener un sistema operativo modificado para el uso que se le dará a
+la consola, estas modificaciones implican:
+\begin{itemize}
+    \item Un menú en donde inicie la consola, que permita escoger entre uno o
+        más juegos y ajustes generales del sistema.
+    \item Puerto serial y conexión SSH disponibles para realizar ajustes al
+        sistema operativo remotamente.
+\end{itemize}
 
 
 \subsubsection{Juego}
@@ -107,6 +112,7 @@ El juego incluirá la posibilidad de guardar mejores puntajes, efectos de sonido
 y gráficos simples en 2D.\\
 Se propone programar en Java utilizando la biblioteca libGDX en busca de un
 desarrollo rápido.
+
 \section{Desarrollo}
 Aquí se incluirá todo lo relacionado al desarrollo del hardware y software
 necesario.
